--- a/codes/bryan-borela/index.html
+++ b/codes/bryan-borela/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" alanaontent="IE=edge">
     <title>Bryan Borela</title>
+    <style>
+        li {
+            color:red;
+        }
+        .nome-class {
+            color: purple
+        }
+         .nome-class1 {
+            color: blue
+        }
+        .nome-class2 {color:green }
+        .nome-class3{color:pink}
+        .nome-class4{ color:black}
+
+    </style>
 </head>
 <body>
     <h1>Bryan</h1>
@@ -11,11 +26,11 @@
 
     <h2>Equipe 2 trimestre</h2>
     <ul>
-        <li>Gustavo</li>
-        <li>Maria</li>
-        <li>Deise</li>
-        <li>Alana</li>
-        <li>Leticia </li>
+        <li class="nome-class1">Gustavo</li>
+        <li class="nome-class2">Maria</li>
+        <li class="nome-class">Deise</li>
+        <li class="nome-class3">Alana</li>
+        <li class="nome-class4">Leticia </li>
     </ul>
 </body>
 </html>
